--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Rock, Paper, Scissors</title>
 </head>
 <body>
     
